# geoviz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  post-clone.sh  run.sh
include/: BoundArray.hpp  Color.h  GLFWContextManager.h  GLFWInitException.h  GLFWwindowArgs.h  GLInitException.h  GLProgram.h  Geomodel.h  GeomodelCollector.h  GeomodelConcatenator.h  GeomodelPool.h  Geoviz.h  IBindable.h  ImmutableArray.h  IndexBuffer.h  PrimitiveBuilder.h  Renderer.h  SDLContext.h  SDLContextLogic.h  SDLContextManager.h  ShaderFactory.h  ShaderFile.h  System.hpp  Vec4f.h  VertexArrayBuffer.h  VertexBuffer.h  VertexBuilder.h  VertexIndexMediator.h  base_components.hpp  compile_init.hpp  components.hpp  entities.hpp  sdl_system.hpp  shader.hpp  state_components.hpp  systems.hpp  templates.hpp  types.hpp  vox-spiral.h  world.hpp
include/core/: Buffer.h  BufferGroup.h  Geomodel.h  Geoviz.h  IBindable.h  IndexBuffer.h  Renderer.h  SDLContext.h  SDLContextLogic.h  SDLWindowArgs.h  ShaderFactory.h  VertexArrayBuffer.h  VertexArrayObject.h  VertexBuffer.h
include/primitives/: PrimitiveBuilder.h
include/program/: vox-spiral.h
include/util/: ImmutableArray.h
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: GLFWContextManager.cpp  GLProgram.cpp  GeomodelConcatenator.cpp  GeomodelPool.cpp  IndexBuffer.cpp  Renderer.cpp  SDLContextManager.cpp  ShaderFactory.cpp  ShaderFile.cpp  VertexArrayBuffer.cpp  VertexBuffer.cpp  VertexBuilder.cpp  main.cpp  vox-equal-spiral.cpp  vox-spiral.cpp
src/core/: Buffer.cpp  GLProgram.cpp  Geomodel.cpp  GeomodelPool.cpp  Geoviz.cpp  IndexBuffer.cpp  Renderer.cpp  SDLContext.cpp  SDLContextLogic.cpp  SDLContextManager.cpp  ShaderFactory.cpp  ShaderFile.cpp  VertexArrayBuffer.cpp  VertexArrayObject.cpp  VertexBuffer.cpp  VertexBuilder.cpp  VertexIndexMediator.cpp
src/primitives/: PrimitiveBuilder.cpp
src/shaders/: f.glsl  v.glsl
